Create dataframes categorical

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1403,6 +1403,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b57f223-2729-4357-9d50-9d1713dbdcd4",
+   "metadata": {},
+   "source": [
+    "### Creating dataframes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "719f1728-24f0-4ddc-b402-6bdcec925008",
    "metadata": {},
    "source": [
@@ -1466,6 +1474,14 @@
     "df_days_products_nc.rename({'Sale': 'number_of_sales', 'SalesAmountInEuro': 'SalesAmountInEuro_sum'}, axis=1, inplace=True)\n",
     "df_days_products_nc['pair_id'] = np.arange(1, len(df_days_products_nc)+1)\n",
     "df_days_products_nc.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2413562-b2f4-4883-9a17-58d03a389271",
+   "metadata": {},
+   "source": [
+    "### Creating EntitySet from dataframes"
    ]
   },
   {
@@ -2239,52 +2255,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10cf7be2-ee5e-4ba5-9a44-cca74d50eddb",
+   "cell_type": "markdown",
+   "id": "3b96d6a7-4aea-4948-a725-88945abad6e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now we will perform operations similar to those in the previous points, but also using categorical variables.\n",
+    "\n",
+    "We'll start by defining a new EntitySet."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2f58ad8f-74ef-4247-b7d4-1d27479c3cc6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "es2 = ft.EntitySet(id=PARTNER_ID)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f7023ef-485b-4035-9204-835a7f07b3f2",
+   "cell_type": "markdown",
+   "id": "0dd89028-b753-4cb9-a15c-949f99159f91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Creating dataframes"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "314e43f7-cd97-4404-8982-6043aaea0d1f",
+   "cell_type": "markdown",
+   "id": "93459861-86b0-4a8f-a4ae-475511de6a62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Dataframes will look in the same way as before - except for `products`"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "917d5149-ba02-46ae-b27b-4f27910eb7de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Products\n",
+    "PRODUCT_INFO = ['product_age_group', 'device_type', 'product_gender', 'product_brand',\n",
+    "                'product_category(1)', 'product_category(2)', 'product_category(3)', 'product_category(4)',\n",
+    "                'product_category(5)', 'product_category(6)', 'product_category(7)',\n",
+    "                'product_country', 'product_id', 'product_title', 'product_price']\n",
+    "df_products = df_nans_encoded[PRODUCT_INFO]\n",
+    "df_products.drop_duplicates(subset=['product_id'], inplace=True)\n",
+    "\n",
+    "# Days\n",
+    "df_days = df_nans_encoded.groupby('day').agg({'Sale': 'size',\n",
+    "                                              'SalesAmountInEuro': ['mean', 'sum'],\n",
+    "                                              'time_delay_for_conversion': ['mean', 'sum'],\n",
+    "                                              'product_price': ['mean', 'sum']})\n",
+    "df_days.columns = ['_'.join(temp).strip('_') for temp in df_days.columns.to_flat_index()]\n",
+    "df_days.reset_index(inplace=True)\n",
+    "\n",
+    "# Users\n",
+    "df_users = df_nans_encoded.groupby('user_id').agg({'Sale': 'size',\n",
+    "                                                   'SalesAmountInEuro': ['mean', 'sum'],\n",
+    "                                                   'time_delay_for_conversion': ['mean', 'sum'],\n",
+    "                                                   'product_price': ['mean', 'sum']})\n",
+    "df_users.columns = ['_'.join(temp).strip('_') for temp in df_users.columns.to_flat_index()]\n",
+    "df_users.reset_index(inplace=True)\n",
+    "\n",
+    "# Transactions\n",
+    "df_transactions = df_nans_encoded[['day', 'product_id', 'user_id',\n",
+    "                                   'SalesAmountInEuro', 'time_delay_for_conversion',\n",
+    "                                   'click_timestamp', 'nb_clicks_1week']]\n",
+    "df_transactions['transaction_id'] = np.arange(1, len(df_transactions)+1)\n",
+    "\n",
+    "# Pairs\n",
+    "df_days_products = df_nans_encoded.groupby(['day', 'product_id']).agg({'Sale': 'size',\n",
+    "                                                                       'SalesAmountInEuro': 'sum'})\n",
+    "df_days_products.rename({'Sale': 'number_of_sales',\n",
+    "                         'SalesAmountInEuro': 'SalesAmountInEuro_sum'},\n",
+    "                        axis=1,\n",
+    "                        inplace=True)\n",
+    "df_days_products['pair_id'] = np.arange(1, len(df_days_products)+1)\n",
+    "df_days_products.reset_index(inplace=True)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a42daeaa-281e-4c63-81db-c6425a04623b",
+   "cell_type": "markdown",
+   "id": "30ce0b05-56b4-4da5-be06-9bbd32e88a3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In order for the qualitative data to be correctly taken into account when carrying out the DFS algorithm, it will be necessary to give them a special Categorical type defined in the woodwork package"
+   ]
   },
   {
    "cell_type": "code",
