--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2352,7 +2352,62 @@
    "id": "98a26aa0-6397-4333-99ff-9a831d196577",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "categorical_type_columns_products = ['product_age_group', 'device_type', 'product_gender', 'product_brand',\n",
+    "                                   'product_category(1)', 'product_category(2)', 'product_category(3)', 'product_category(4)',\n",
+    "                                   'product_category(5)', 'product_category(6)', 'product_category(7)',\n",
+    "                                   'product_country', 'product_id', 'product_title']\n",
+    "categorical_type_columns_products = {column: Categorical for column in categorical_type_columns_products}\n",
+    "\n",
+    "es = es.add_dataframe(\n",
+    "    dataframe_name=\"transactions\",\n",
+    "    dataframe=df_transactions,\n",
+    "    index=\"transaction_id\",\n",
+    "    logical_types={\n",
+    "        \"product_id\": Categorical,\n",
+    "        \"user_id\": Categorical,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "es = es.add_dataframe(\n",
+    "    dataframe_name=\"products\",\n",
+    "    dataframe=df_products,\n",
+    "    index=\"product_id\",\n",
+    "    logical_types=categorical_type_columns_products\n",
+    ")\n",
+    "\n",
+    "es = es.add_dataframe(\n",
+    "    dataframe_name=\"users\",\n",
+    "    dataframe=df_users,\n",
+    "    index='user_id',\n",
+    "    logical_types={\n",
+    "        'user_id': Categorical,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "es = es.add_dataframe(\n",
+    "    dataframe_name=\"days\",\n",
+    "    dataframe=df_days,\n",
+    "    index='day'\n",
+    ")\n",
+    "\n",
+    "es = es.add_dataframe(\n",
+    "    dataframe_name=\"pairs\",\n",
+    "    dataframe=df_days_products,\n",
+    "    index='pair_id',\n",
+    "    logical_types={\n",
+    "        'product_id': Categorical\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "es = es.add_relationship(\"products\", \"product_id\", \"transactions\", \"product_id\")\n",
+    "es = es.add_relationship(\"users\", \"user_id\", \"transactions\", \"user_id\")\n",
+    "es = es.add_relationship(\"days\", \"day\", \"transactions\", \"day\")\n",
+    "es = es.add_relationship(\"days\", \"day\", \"pairs\", \"day\")\n",
+    "es = es.add_relationship(\"products\", \"product_id\", \"pairs\", \"product_id\")\n",
+    "\n",
+    "es.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
