--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -106,8 +106,6 @@
     "import featuretools as ft\n",
     "from woodwork.logical_types import Categorical\n",
     "\n",
-    "\n",
-    "\n",
     "%matplotlib inline"
    ]
   },
@@ -151,7 +149,7 @@
    "source": [
     "## CREATE CSV - CHOOSE THE PARTNER_ID\n",
     "\n",
-    "The analysis will be performed only for one of many *partner_id* from the dataset. Because the dataset can be considered a big data source, we have created a csv file containing only the information related to chosen ` PARTNER_ID `."
+    "The analysis will be performed only for one of many *partner_id* from the dataset. Because the dataset can be considered a big data source, a csv file containing only the information related to chosen ` PARTNER_ID ` has been created."
    ]
   },
   {
@@ -199,7 +197,7 @@
    "source": [
     "Before performing EDA, let's preprocess the data - handle NaNs and hashed values.\n",
     "\n",
-    "First of all let's change all the `-1` values in the dataset to `np.NaN` to a indicate missing value."
+    "First of all let's change all the `-1` values in the dataset to `np.NaN` to indicate a missing value."
    ]
   },
   {
@@ -1009,7 +1007,7 @@
    "id": "a76d0a5d-d25c-4191-a2c2-69bcc6f79b15",
    "metadata": {},
    "source": [
-    "Thanks to this frequency table, we can observe that there is one outlier. To make further data analysis easier and more transparent (histogram), we will filter it out from the data set."
+    "Thanks to this frequency table, we can observe that there is one extreme outlier. To make further data analysis easier and more transparent (histogram), we will filter it out from the data set."
    ]
   },
   {
@@ -3849,14 +3847,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732c85da-7c0a-43d4-ba52-c16bdca2fdac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d80a6c96-91ff-475b-bbea-0e6a7bc36c5a",
    "metadata": {},
    "outputs": [],
@@ -3906,12 +3896,22 @@
    "cell_type": "markdown",
    "id": "747d082f-f286-4eb4-8914-71e4d885406a",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Linear regression"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d81b1ac9-6327-4ac9-92c6-bf767300830c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f146ce1-7002-4a24-94ba-ee89af3e2df7",
    "metadata": {},
    "outputs": [],
    "source": []
