Add Two-Sample test

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "id": "52340eed-c2df-4992-989e-e179f8c19921",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
     "pd.options.display.float_format = '{:.3f}'.format\n",
     "\n",
     "from scipy.stats import moment\n",
-    "from scipy.stats import t, norm, pearsonr\n",
+    "from scipy.stats import t, norm, shapiro\n",
     "\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
@@ -1226,6 +1226,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43e11dd4-a0e7-48b2-b687-5643c2cff00a",
+   "metadata": {},
+   "source": [
+    "### Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11824169-3af2-4ec5-8da8-0f4dc9af2396",
    "metadata": {},
    "source": [
@@ -1285,7 +1293,7 @@
    "source": [
     "The next performed test will be a Two-Sample test. The first sample will be purchases made from August 4, 2020 to September 15, 2020, and the second sample will be purchases made from September 16, 2020 to November 2, 2020. First, we will divide our whole dataset into these two groups.\n",
     "\n",
-    "Thanks to this test, we will check whether the average purchases in the second period of time were different from the purchases in the first period. For this we will use the 'product_price_mean' column.\n",
+    "Thanks to this test, we will check whether the every 3 days average purchases in the second period of time were different from the every 3 days average purchases in the first period. For this we will use the 'SalesAmountInEuro_sum' column.\n",
     "\n",
     "HYPOTHESES:\n",
     "\n",
@@ -1296,7 +1304,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 118,
+   "id": "4e0a3309-4132-4aba-9c69-c81f152ad5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframe with week averages\n",
+    "df_two_sample = df_eda[['day', 'SalesAmountInEuro_sum']]\n",
+    "df_two_sample.day = pd.to_datetime(df_two_sample.day)\n",
+    "df_two_sample.set_index('day', inplace=True)\n",
+    "df_week_avg = df_two_sample.groupby(pd.Grouper(freq='3D')).mean()\n",
+    "df_week_avg.reset_index(inplace=True)\n",
+    "\n",
+    "df_sample_1 = df_week_avg[df_week_avg['day'] < dt.datetime(2020, 9, 16)]\n",
+    "df_sample_2 = df_week_avg[df_week_avg['day'] >= dt.datetime(2020, 9, 16)]\n",
+    "\n",
+    "sample_1 = df_sample_1.SalesAmountInEuro_sum\n",
+    "sample_2 = df_sample_2.SalesAmountInEuro_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "0c119abe-c46d-4874-9463-30c62e984e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ShapiroResult(statistic=0.94046950340271, pvalue=0.3883109390735626)\n",
+      "ShapiroResult(statistic=0.9335607290267944, pvalue=0.2774386405944824)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shapiro(sample_1))\n",
+    "print(shapiro(sample_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "id": "d8511fea-73a4-4cfe-b5e1-dde5825136a9",
    "metadata": {},
    "outputs": [
@@ -1304,18 +1353,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z value -3.114\n",
-      "Critical value: -1.959963984540054, 1.959963984540054\n"
+      "Z value -3.573\n",
+      "Critical values: -1.959963984540054, 1.959963984540054\n"
      ]
     }
    ],
    "source": [
     "alpha = 0.05\n",
-    "df_sample_1 = df_eda[df_eda['day'] < dt.date(2020, 9, 16)]\n",
-    "df_sample_2 = df_eda[df_eda['day'] >= dt.date(2020, 9, 16)]\n",
-    "\n",
-    "sample_1 = df_sample_1.product_price_mean\n",
-    "sample_2 = df_sample_2.product_price_mean\n",
+    "sample_1 = df_sample_1.SalesAmountInEuro_sum\n",
+    "sample_2 = df_sample_2.SalesAmountInEuro_sum\n",
     "\n",
     "n1 = len(sample_1)\n",
     "n2 = len(sample_2)\n",
@@ -1326,8 +1372,24 @@
     "\n",
     "Z = (mu1-mu2)/np.sqrt((s1_squared/n1 + s2_squared/n2))\n",
     "print(f'Z value {Z:.3f}')\n",
-    "print(f'Critical value: {-norm.ppf(1-alpha/2)}, {norm.ppf(1-alpha/2)}')"
+    "print(f'Critical values: {-norm.ppf(1-alpha/2)}, {norm.ppf(1-alpha/2)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656c8b8f-7072-4e50-b95b-026aa7b13fea",
+   "metadata": {},
+   "source": [
+    "### Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92085e06-a67a-4687-80d9-5a7a1fc2a14e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2710,10 +2772,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49d137e1-865c-4c1c-9122-4de01db45b28",
+   "metadata": {},
+   "source": [
+    "# 6. PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "910b9c07-7aba-4e85-a620-dddcd5719a38",
    "metadata": {},
    "source": [
-    "# Standard scaler"
+    "## Standard scaler"
    ]
   },
   {
@@ -2751,14 +2821,6 @@
     "X = df1.drop(['pair_id', 'SalesAmountInEuro_sum', 'product_id'], axis=1)\n",
     "df1_scaled = standard_scaler.fit_transform(X)\n",
     "df1_scaled"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "49d137e1-865c-4c1c-9122-4de01db45b28",
-   "metadata": {},
-   "source": [
-    "# PCA"
    ]
   },
   {
@@ -2894,7 +2956,7 @@
    "id": "3a4953ad-32f4-4f81-8688-76cf50866f29",
    "metadata": {},
    "source": [
-    "# 6. COMPETITION METRIC"
+    "# 7. COMPETITION METRIC"
    ]
   },
   {
@@ -2902,7 +2964,7 @@
    "id": "3efd951d-ae88-419c-8346-17f818e21fc5",
    "metadata": {},
    "source": [
-    "# 7. SUMMARY"
+    "# 8. SUMMARY"
    ]
   },
   {
@@ -2910,7 +2972,7 @@
    "id": "d6c8f34b-3b44-4dc9-b725-3ab5c2f86714",
    "metadata": {},
    "source": [
-    "# 8. LITERATURE\n",
+    "# 9. LITERATURE\n",
     "\n",
     "1. https://en.wikipedia.org/wiki/Frequency_(statistics)\n",
     "2. https://en.wikipedia.org/wiki/Exploratory_data_analysis\n",
