Add desc two-sample chart

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1403,7 +1403,11 @@
    "cell_type": "markdown",
    "id": "a35ad926-6426-4375-a26a-2d4e964c2742",
    "metadata": {},
-   "source": []
+   "source": [
+    "The value of the Z statistic is outside the critical area, so we can reject the null hypothesis and adopt a new hypothesis. This means that the average values of purchases in these two time samples differed from each other.\n",
+    "\n",
+    "Let's take a look at how the values look on the chart."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1443,6 +1447,14 @@
     "plt.ylabel(\"Mean revenue\", fontsize=15)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "329a289c-a4a1-4023-8460-410c9bedd751",
+   "metadata": {},
+   "source": [
+    "As we can see, the values in the second sample are significantly different from those in the first sample."
    ]
   },
   {
