--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -18,7 +18,7 @@
     "3. [TESTING HYPOTHESES](#3.-TESTING-HYPOTHESES)\n",
     "4. [FEATURE ENGINEERING](#4.-FEATURE-ENGINEERING)\n",
     "5. [STATISTICAL TESTING OF DESCRIPTIVE FEATURES](#5.-STATISTICAL-TESTING-OF-DESCRIBING-FEATURES)\n",
-    "6. [COMPETITION METRIC](#6.-COMPETITION-METRIC)\n",
+    "6. [PCA](#6.-PCA)\n",
     "7. [SUMMARY](#7.-SUMMARY)\n",
     "8. [LITERATURE](#8.-LITERATURE)\n"
    ]
@@ -3150,18 +3150,35 @@
    "source": [
     "# 8. LITERATURE\n",
     "\n",
-    "1. https://en.wikipedia.org/wiki/Frequency_(statistics)\n",
-    "2. https://en.wikipedia.org/wiki/Exploratory_data_analysis\n",
-    "3. https://en.wikipedia.org/wiki/Summary_statistics"
+    "\n",
+    "**BOOKS** :\n",
+    "- Hands-On Machine Learning with Scikit-Learn and TensorFlow - Aurelien Geron\n",
+    "- Practical Statistics for Data Scientists: 50+ Essential Concepts Using R and Python, 2nd Edition - Peter Bruce, Andrew Bruce, Peter Gedeck\n",
+    "\n",
+    "**LINKS** :\n",
+    "1. INTRODUCTION\n",
+    "- https://ailab.criteo.com/criteo-sponsored-search-conversion-log-dataset/\n",
+    "- https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html\n",
+    "2. EXPLORATORY DATA ANALYSIS\n",
+    "- https://stackoverflow.com/questions/34317149/pandas-groupby-with-bin-counts\n",
+    "- https://seaborn.pydata.org/generated/seaborn.histplot.html\n",
+    "- https://en.wikipedia.org/wiki/Frequency_(statistics)\n",
+    "- https://en.wikipedia.org/wiki/Exploratory_data_analysis\n",
+    "- https://en.wikipedia.org/wiki/Summary_statistics\n",
+    "3. TESTING HYPOTHESES\n",
+    "- https://pl.wikipedia.org/wiki/Test_Shapiro-Wilka\n",
+    "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.shapiro.html\n",
+    "- http://www.sthda.com/english/wiki/correlation-test-between-two-variables-in-r\n",
+    "4. FEATURE ENGINEERING\n",
+    "- https://medium.com/@souvikmanna251/deep-feature-synthesis-introduction-to-feature-engineering-49438cdc143e\n",
+    "- https://medium.com/@souvikmanna251/deep-feature-synthesis-introduction-to-feature-engineering-7977f626359f\n",
+    "- https://towardsdatascience.com/deep-feature-synthesis-vs-genetic-feature-generation-6ba4d05a6ca5\n",
+    "- https://featuretools.alteryx.com/en/stable/index.html#\n",
+    "6. PCA\n",
+    "- https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
+    "- https://www.keboola.com/blog/pca-machine-learning\n",
+    "- https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68111f0b-fe9e-463f-b882-90a42362ae89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
