--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "52340eed-c2df-4992-989e-e179f8c19921",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "9ac0d41a-b3f1-4521-8db0-d1a521fb6d0d",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "b18d113b-675e-422a-b1ed-463a323ae1f5",
    "metadata": {
     "tags": []
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "f24fde75-b64d-42b8-8180-37e508cb3364",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "2535cdfe-4c21-4a98-a3b9-16e5bdefcfda",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "15354e8a-bb64-4fb2-a5f1-2a6978312437",
    "metadata": {
     "tags": []
@@ -286,14 +286,14 @@
    "id": "5e12b83d-a72d-4a7d-ac9c-705be269d38f",
    "metadata": {},
    "source": [
-    "Thanks to this summary we know now that 16 features have `object` type which means they have been hashed. We can simplify every column with `object` type. As long as they are hashed, we do not lose any valuable information (however we will store the original data in a dictionary `encoders`) and what is more - it will simplify the EDA of the dataset later. \\\n",
+    "Thanks to this summary we know now that 14 features have `object` type which means they have been hashed. We can simplify every column with `object` type. As long as they are hashed, we do not lose any valuable information (however we will store the original data in a dictionary `encoders`) and what is more - it will simplify the EDA of the dataset later. \\\n",
     "For example we will transform the `product_gender` column by assigning one number for each category. \\\n",
     "To achieve this we will use `LabelEncoder` from `sklearn.preprocessing` package."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "12861f19-587b-48cc-afd7-925a49be7415",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "6e84c950-018a-49da-8060-69d0e47919e1",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "7            1417.817            23.630            0.985  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "b913c09f-2a57-47d0-9925-e3686c8f6b6f",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
        "IQR                   78.000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,17 +915,17 @@
     "\n",
     "summary_statistics = pd.DataFrame({\n",
     "    'product_price_mean': [price.mean(),\n",
-    "                          price.median(),\n",
-    "                          price.var(ddof=0),\n",
-    "                          price.std(ddof=0),\n",
-    "                          moment(price, 3)/(moment(price, 2)**(3/2)),\n",
-    "                          moment(price, 4)/(moment(price, 2))**2,\n",
+    "                           price.median(),\n",
+    "                           price.var(ddof=0),\n",
+    "                           price.std(ddof=0),\n",
+    "                           moment(price, 3)/(moment(price, 2)**(3/2)),\n",
+    "                           moment(price, 4)/(moment(price, 2))**2,\n",
     "                           price.quantile(0),\n",
-    "                          price.quantile(0.25),\n",
-    "                          price.quantile(0.5),\n",
-    "                          price.quantile(0.75),\n",
+    "                           price.quantile(0.25),\n",
+    "                           price.quantile(0.5),\n",
+    "                           price.quantile(0.75),\n",
     "                           price.quantile(1),\n",
-    "                          price.quantile(0.75) - price.quantile(0.25)]},\n",
+    "                           price.quantile(0.75) - price.quantile(0.25)]},\n",
     "    index=['mean', 'median', 'variance', 'std', 'skewness', 'kurtosis', '0.0', '0.25', '0.5', '0.75', '1.0', 'IQR'])\n",
     "\n",
     "summary_statistics"
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "b10da31c-3fd1-483e-a25a-8914f872d3d0",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "af7f7b6e-3a42-4626-bc10-c66a80cb1160",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "f817abd2-3d8e-470f-a999-6296263e6bfa",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "6afcb4d3-5af1-46f4-b0e7-b473f925f56d",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "6cdeabcb-d0ec-4b14-8049-43c25654c5b7",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "bd1eb62a-d378-46a6-8f5d-51149041c880",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "7ffe5a16-9683-41ac-83d1-761f9f0fad75",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "4e0a3309-4132-4aba-9c69-c81f152ad5e6",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "id": "0c119abe-c46d-4874-9463-30c62e984e3e",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
    "id": "d771d0ae-d30b-4c30-8209-6804ef0caba2",
    "metadata": {},
    "source": [
-    "With the significance level alpha = 0.05, we have can not reject the null hypothesis.\n",
+    "With the significance level alpha = 0.05, we can not reject the null hypothesis.\n",
     "\n",
     "So we can proceed to the test of two samples.\n",
     "\n",
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "id": "d8511fea-73a4-4cfe-b5e1-dde5825136a9",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 20,
    "id": "92085e06-a67a-4687-80d9-5a7a1fc2a14e",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "2ab8424a-73c6-40bd-aeee-fee95c0f1e66",
    "metadata": {},
    "outputs": [],
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "ace624f8-66b0-4328-a107-c7ca40a5f4e3",
    "metadata": {},
    "outputs": [],
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "980a9814-7c48-447f-a972-760f1dce475f",
    "metadata": {},
    "outputs": [
@@ -1721,10 +1721,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x294f140f850>"
+       "<graphviz.dot.Digraph at 0x1a4569967f0>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "3eb50a46-3e63-4af5-9b2d-fb50eee93000",
    "metadata": {},
    "outputs": [],
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "3eba41ed-0f7d-4595-8f63-55b66ecd58a6",
    "metadata": {},
    "outputs": [],
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "2f58ad8f-74ef-4247-b7d4-1d27479c3cc6",
    "metadata": {},
    "outputs": [],
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "917d5149-ba02-46ae-b27b-4f27910eb7de",
    "metadata": {},
    "outputs": [],
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "98a26aa0-6397-4333-99ff-9a831d196577",
    "metadata": {},
    "outputs": [
@@ -2051,10 +2051,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x294f14306a0>"
+       "<graphviz.dot.Digraph at 0x1a45780f820>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "a64fd8a2-bb04-45ee-b6e7-1f4bbeb10d3a",
    "metadata": {},
    "outputs": [],
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "941646b0-5c3b-4909-97d1-6d364be7558f",
    "metadata": {},
    "outputs": [],
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "3492585e-688b-447f-9e26-3f958fb39f48",
    "metadata": {},
    "outputs": [
@@ -2453,7 +2453,7 @@
        "[5 rows x 579 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "5eac5883-b00e-4f00-b067-2353cf482d6f",
    "metadata": {},
    "outputs": [
@@ -2544,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "id": "ed1b5194-bdef-4cee-8a55-7edc9ae39058",
    "metadata": {},
    "outputs": [
@@ -2813,7 +2813,7 @@
        "[5 rows x 627 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "id": "9710ff39-aacc-4803-ae3f-d5eca2c34d98",
    "metadata": {},
    "outputs": [
@@ -2914,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 35,
    "id": "842aa1e8-8859-41dc-9726-27636214d5c1",
    "metadata": {},
    "outputs": [
@@ -2936,7 +2936,7 @@
        "        -2.50090012, -2.50090012]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 36,
    "id": "33b289b7-3e00-45bc-b402-e12675fb3097",
    "metadata": {},
    "outputs": [],
@@ -2979,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 37,
    "id": "e642a659-acd5-4aa5-98bc-16fc31d53824",
    "metadata": {},
    "outputs": [
@@ -3015,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 38,
    "id": "a4940ad6-a34f-446d-9a05-0d0dbc54128d",
    "metadata": {},
    "outputs": [
@@ -3023,11 +3023,11 @@
      "data": {
       "text/plain": [
        "array([[-1.39556190e+08,  9.72250453e+06,  5.08193330e+06, ...,\n",
-       "        -4.91776499e+03,  9.30111147e+03, -5.86391130e+03],\n",
+       "        -4.91776499e+03,  9.30111149e+03, -5.86391121e+03],\n",
        "       [-1.39556788e+08,  9.72193643e+06,  5.08294718e+06, ...,\n",
-       "        -4.92041037e+03,  9.29933788e+03, -5.85887130e+03],\n",
+       "        -4.92041036e+03,  9.29933790e+03, -5.85887120e+03],\n",
        "       [-1.12801151e+08,  8.34015336e+06,  2.20059421e+06, ...,\n",
-       "        -5.09714743e+03,  1.28344815e+02, -2.45378227e+03],\n",
+       "        -5.09714743e+03,  1.28344820e+02, -2.45378224e+03],\n",
        "       ...,\n",
        "       [-1.18450843e+08,  6.90242439e+06,  3.87772011e+06, ...,\n",
        "         5.83104120e+03,  1.26190455e+04,  1.03417576e+04],\n",
@@ -3037,7 +3037,7 @@
        "         5.84042653e+03,  1.26159541e+04,  1.03477895e+04]])"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 39,
    "id": "fed96dc2-c1a4-407c-9f2b-c4935f61ba2b",
    "metadata": {},
    "outputs": [
@@ -3068,7 +3068,7 @@
        "(2642, 40)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3102,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 43,
    "id": "07037a3f-e56c-4a3b-9384-6efe1ea42a08",
    "metadata": {},
    "outputs": [
@@ -3137,10 +3137,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "90825c01-ca02-41dc-83bf-6eb6793c1ac1",
+   "metadata": {},
+   "source": [
+    "Thanks to the test, we know that 7 out of 40 selected features are significantly correlated with the described variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3efd951d-ae88-419c-8346-17f818e21fc5",
    "metadata": {},
    "source": [
     "# 7. SUMMARY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61749937-bcb7-41c5-9dcf-9c86ad42afe9",
+   "metadata": {},
+   "source": [
+    "This notebook covers Exploratory Analysis + Feature Engineering Elements + Test of Correlation Coefficients using Criteo Data Search data.\n",
+    "\n",
+    "1. Motivations for choices made during work:\n",
+    "\n",
+    "During the work, I focused mainly on the analysis of the numerical values contained in the SalesAmountInEuro and product_price columns with divisions into different subgroups, because they were later taken into account in the correlation tests. It was also easy to present these features in graphs due to their quantitative nature. Most of the data in the dataset was categorical.\n",
+    "\n",
+    "Unfortunately, a large amount of data had to be omitted from the considerations due to the lack of information in many fields (NaN). Thanks to this, however, I was able to get acquainted with the work with a previously unprepared data set.\n",
+    "\n",
+    "I decided to group the data in such a way that it is possible to carry out tests on them and to make a sensible and clear data visualization.\n",
+    "\n",
+    "2. Conclusions\n",
+    "\n",
+    "The Deep Feature Synthesis algorithm is a tool that can be of great help in training machine learning models. Thanks to it, you can create many new features that are not present in the original dataset, and which may turn out to be crucial when training the model.\n",
+    "\n",
+    "Thanks to the PCA algorithm, we can significantly reduce the multidimensionality of data without losing a lot of information.\n",
+    "\n",
+    "3. Suggestions for further steps\n",
+    "\n",
+    "The presented notebook contains work on only a small part of the entire Criteo Data Search dataset. If I were to take the next steps, I would also consider other product manufacturers and compare them with each other. Given the size of the entire dataset, a machine learning model could also be trained to predict the price of a product based on its characteristics."
    ]
   },
   {
@@ -3156,25 +3190,30 @@
     "- Practical Statistics for Data Scientists: 50+ Essential Concepts Using R and Python, 2nd Edition - Peter Bruce, Andrew Bruce, Peter Gedeck\n",
     "\n",
     "**LINKS** :\n",
-    "1. INTRODUCTION\n",
+    "\n",
+    "INTRODUCTION\n",
     "- https://ailab.criteo.com/criteo-sponsored-search-conversion-log-dataset/\n",
     "- https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html\n",
-    "2. EXPLORATORY DATA ANALYSIS\n",
+    "\n",
+    "EXPLORATORY DATA ANALYSIS\n",
     "- https://stackoverflow.com/questions/34317149/pandas-groupby-with-bin-counts\n",
     "- https://seaborn.pydata.org/generated/seaborn.histplot.html\n",
     "- https://en.wikipedia.org/wiki/Frequency_(statistics)\n",
     "- https://en.wikipedia.org/wiki/Exploratory_data_analysis\n",
     "- https://en.wikipedia.org/wiki/Summary_statistics\n",
-    "3. TESTING HYPOTHESES\n",
+    "\n",
+    "TESTING HYPOTHESES\n",
     "- https://pl.wikipedia.org/wiki/Test_Shapiro-Wilka\n",
     "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.shapiro.html\n",
     "- http://www.sthda.com/english/wiki/correlation-test-between-two-variables-in-r\n",
-    "4. FEATURE ENGINEERING\n",
+    "\n",
+    "FEATURE ENGINEERING\n",
     "- https://medium.com/@souvikmanna251/deep-feature-synthesis-introduction-to-feature-engineering-49438cdc143e\n",
     "- https://medium.com/@souvikmanna251/deep-feature-synthesis-introduction-to-feature-engineering-7977f626359f\n",
     "- https://towardsdatascience.com/deep-feature-synthesis-vs-genetic-feature-generation-6ba4d05a6ca5\n",
     "- https://featuretools.alteryx.com/en/stable/index.html#\n",
-    "6. PCA\n",
+    "\n",
+    "PCA\n",
     "- https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
     "- https://www.keboola.com/blog/pca-machine-learning\n",
     "- https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html"
